k8s/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
      - name: scheduler
        image: ghcr.io/lenchoajema/event-scheduler:latest
        imagePullPolicy: IfNotPresent
